# hackerrank-orchestrate-june26

./: .env.example  .gitignore  Makefile  output.csv  pyproject.toml
code/: README.md  main.py  requirements.txt
code/evaluation/: evaluation_report.md  main.py  sample_errors.csv  sample_predictions.csv
code/tests/: test_cache_key.py  test_calibration.py  test_customer_text.py  test_post_process.py  test_schema.py
